# xfce4-activeapp-plugin

./: .gitignore  README  configure.ac.in
panel-plugin/: Makefile.am  activeapp-dialogs.c  activeapp.c  activeapp.desktop.in  activeapp.h  sample-dialogs.c  sample-dialogs.h  sample.c  sample.h
